--- a/app.json
+++ b/app.json
@@ -40,28 +40,15 @@
             {
               "scheme": "halomusicapp",
               "host": "auth-callback"
-            }
-          ]
-        },
-        {
-          "action": "VIEW",
-          "autoVerify": true,
-          "category": [
-            "BROWSABLE",
-            "DEFAULT"
-          ],
-          "data": [
+            },
             {
               "scheme": "halomusicapp",
-              "host": "auth-callback"
+              "host": "success"
             }
           ]
         }
       ],
       "permissions": [
-        "FOREGROUND_SERVICE",
-        "android.permission.RECORD_AUDIO",
-        "android.permission.MODIFY_AUDIO_SETTINGS",
         "FOREGROUND_SERVICE",
         "android.permission.RECORD_AUDIO",
         "android.permission.MODIFY_AUDIO_SETTINGS"
